# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.22 2007/12/24 14:54:13 armin76 Exp $

*ZendFramework-1.0.3 (24 Dec 2007)

  24 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  +ZendFramework-1.0.3.ebuild:
  Version bump from the php-overlay

  21 Dec 2007; Jakub Moc <jakub@gentoo.org>
  +ZendFramework-1.0.3.ebuild:
  Version bump, fix LICENSE, do not dodoc INSTALL and LICENSE, fix docs location

  15 Oct 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.0.2.ebuild:
  Cosmetic changes, since upstream has started using sane naming of tar files.

*ZendFramework-1.0.2 (06 Oct 2007)

  06 Oct 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.1-r1.ebuild, +ZendFramework-1.0.2.ebuild:
  Bumping to version 1.0.2

*ZendFramework-1.0.1-r1 (10 Aug 2007)

  10 Aug 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.1.ebuild, +ZendFramework-1.0.1-r1.ebuild:
  Fixing MY_PV and commenting out incubator, fixing bug #188138

*ZendFramework-1.0.1 (04 Aug 2007)

  04 Aug 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0.ebuild, +ZendFramework-1.0.1.ebuild:
  Bumping to version 1.0.1

*ZendFramework-1.0.0 (03 Jul 2007)

  03 Jul 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0_rc3.ebuild, +ZendFramework-1.0.0.ebuild:
  Bumping to version 1.0.0

*ZendFramework-1.0.0_rc3 (28 Jun 2007)

  28 Jun 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0_rc1.ebuild, +ZendFramework-1.0.0_rc3.ebuild:
  Bumping to version 1.0.0_rc3, manual and api doc has moved to seperat source
  files.

*ZendFramework-1.0.0_rc1 (06 Jun 2007)

  06 Jun 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-0.9.3.ebuild, +ZendFramework-1.0.0_rc1.ebuild:
  Version bump.

*ZendFramework-0.9.3 (15 May 2007)
