@@ -1,6 +1,16 @@
 # ChangeLog for dev-php5/ZendFramework
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.22 2007/12/24 14:54:13 armin76 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.23 2008/03/04 19:35:56 jokey Exp $
+
+*ZendFramework-1.0.4 (04 Mar 2008)
+
+  04 Mar 2008; Markus Ullmann <jokey@gentoo.org>
+  +ZendFramework-1.0.4.ebuild:
+  Version bump from project overlay
+
+  03 Mar 2008; Jakub Moc <jakub@gentoo.org>
+  +ZendFramework-1.0.4.ebuild:
+  Version bump
 
 *ZendFramework-1.0.3 (24 Dec 2007)
 
